minor fix noticed on prod, where elements does not automatically get overflow:scroll

--- a/assets/src/components/calendar.scss
+++ b/assets/src/components/calendar.scss
@@ -68,6 +68,10 @@
       pointer-events: none;
     }
 
+    .fc-scroller.fc-scroller-liquid-absolute {
+      overflow: scroll;
+    }
+
     .resource-calendar-capacity-header > div > div {
       margin: auto;
     }
